k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
